--- a/peCourseWork.csproj
+++ b/peCourseWork.csproj
@@ -56,6 +56,12 @@
     <Compile Include="FormPeCourseWork.designer.cs">
       <DependentUpon>FormPeCourseWork.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSettings.Designer.cs">
+      <DependentUpon>FormSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="Fraction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -63,6 +69,9 @@
     <Compile Include="SpecialNumbers.cs" />
     <EmbeddedResource Include="FormPeCourseWork.resx">
       <DependentUpon>FormPeCourseWork.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormSettings.resx">
+      <DependentUpon>FormSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
