- form settings backend mvp

--- a/App.config
+++ b/App.config
@@ -10,8 +10,11 @@
     </startup>
     <userSettings>
         <peCourseWork.Properties.Settings>
-            <setting name="Prompt" serializeAs="String">
+            <setting name="ShowPrompts" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="EPSGUI" serializeAs="String">
+                <value>2</value>
             </setting>
         </peCourseWork.Properties.Settings>
     </userSettings>
