--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -2,8 +2,11 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="peCourseWork.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="Prompt" Type="System.Boolean" Scope="User">
+    <Setting Name="ShowPrompts" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="EPSGUI" Type="System.Byte" Scope="User">
+      <Value Profile="(Default)">2</Value>
     </Setting>
   </Settings>
 </SettingsFile>
